Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -287,9 +287,92 @@ Rectangle::Regtangle(const int &x1, const int &y1, const int &x2, const int &y2)
       
 ![cpp19](https://user-images.githubusercontent.com/50267433/74338442-85735880-4de5-11ea-8b32-1d8dc9e5b3af.PNG)   
     
+기존 클래스내의 상수 같은 경우는 const를 사용할 경우 랜덤값 할당, 초기화 상태 작성 불가로 인해 힘들었지만  
+이니셜라이저를 이용해서 상수를 지정할 수 있기에 더욱 안전한 코드로 작성할 수 있게끔 되었다.   
     
+## 3.3. 클래스 멤버로 참조자 선언하기   
+우선 학습에 앞서 이러한 것도 문법적으로 가능하다는 것이지 유용하게 사용한다는 것은 아니다!!       
+   
+**예시**
+```
+class BBB
+{
+private:
+	AAA &ref;
+	const int &num;
+public:
+	BBB(AAA &r, const int &n)
+		: ref(r), num(n)
+	{
+		.	.	.	.	.	.
+	}
+}
+```
+이는 외부에 객체를 생성했는데 이를 참조할 수 있는 참조자를 만든 것이다.    
+   
+이니셜라이저의 초기화는 선언과 동시에 초기화 되는 형태이므로,  
+참조자 같이 선언과 동시에 초기화 해주어야 하는 특성도 포옹할 수 있다.   
+   
+## 3.4. private 생성자      
+   
+![cpp20](https://user-images.githubusercontent.com/50267433/74340467-4cd57e00-4de9-11ea-99cb-d5c2b79d056b.PNG)
+   
+위 그림에서의 순서   
+  
+1. 일반 생성자로 num을 0으로 초기화 하고 객체 생성  
+2. 외부에서 CreateInitObj를 통해서 private 생성자를 호출하여 num에 값을 넣고 객체도 생성함    
+3. 외부에서는 리턴받은 포인터를 통해서 private 생성자로 만들어진 클래스에 접근이 가능해졌다.   
+   
+즉, private 생성자를 이용하는 것은 내부 함수를 통해서 객체를 생성한다고 보면 된다.          
+그리고 그렇게 생성된 객체를 포인터를 통해서 접근을 하는 것이다.     
+    
+언뜻 보면 불필요해 보이지만 은근히 유용하게 사용이되니 잘 알아 두자.    
      
-### 3.1.1. 내용1
+## 3.5. 소멸자의 이해
+**소멸자 미정의 클래스**
 ```
-내용1
+class AAA
+{
+	// empty class
+};
 ```
+```
+class AAA
+{
+public:
+	AAA(){}
+	~AAA(){} // 우왕 나 생성됨
+};
+```  
+AAA 클래스에 소멸자를 명시하지 않으면 디폴트 소멸자가 호출된다.             
+소멸자도 클래스의 이름을 가지고 정의해주면 되고 생성자와 마찬가지로 반환형이 없다.      
+단, ```~```를 앞에 기입해줌으로써 소멸자임을 나타내주면 된다.      
+          
+### 3.5.1. 소멸자의 활용    
+```
+class Person
+{
+private:
+	char * name;
+	int age;
+public:
+	Person(char* myname, int myage)
+	{
+		int len = strlen(myname)+1;
+		name = new char[len]; // 
+		strcpy(name, myname);
+		age = myage;
+	}
+	void ShowPersonInfo() const
+	{
+		cout<<"이름: "<<name<<endl;
+		cout<<"나이: "<<age<<endl;
+	}
+	~Person()
+	{
+		delete []name; // 객체를 삭제
+		cout<<"called destructor!"<<endl;
+	}
+}
+```
+생성자에서 할당한 메모리 공간을 소멸시키기 좋은 위치가 소멸자이다.   
