Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -379,3 +379,6 @@ public:
          
 ***
 # 4. 클래스와 배열 그리고 this 포인터   
+this 포인터 : this를 포함하는 메모리 공간 자체를 의미   
+즉 A 클래스를 기반으로 하는 a 객체에 this 가 있으면 a 객체의 메모리 주소를 의미
+또한 마찬가지로 A 클래스를 기반으로 하는 aa 객체에 this가 있으면 aa 객체의 메모리 주소를 의미
