Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -377,8 +377,68 @@ public:
 ```
 생성자에서 할당한 메모리 공간을 소멸시키기 좋은 위치가 소멸자이다.   
          
-***
-# 4. 클래스와 배열 그리고 this 포인터   
-this 포인터 : this를 포함하는 메모리 공간 자체를 의미   
-즉 A 클래스를 기반으로 하는 a 객체에 this 가 있으면 a 객체의 메모리 주소를 의미
-또한 마찬가지로 A 클래스를 기반으로 하는 aa 객체에 this가 있으면 aa 객체의 메모리 주소를 의미
+***    
+# 4. 클래스와 배열 그리고 this 포인터       
+## 4.1. this 포인터
+this 포인터 : this를 포함하는 메모리 공간 자체를 의미 즉, 객체 자신을 가리키는 포인터           
+만약 A 클래스의 코드 구성에 this가 있다고 가정을 한다면    
+A 클래스를 기반으로 하는 a 객체에 this 가 있으면 a 객체의 메모리 주소를 의미              
+A 클래스를 기반으로 하는 aa 객체에 this가 있으면 aa 객체의 메모리 주소를 의미한다.        
+(물론 a 와 aa 객체의 메모리 주소는 다르다.)      
+       
+this 포인터는 클래스 안에 있더라도 메모리 자체를 가리키고 있기에 값을 변경할 수 있다.          
+왜냐하면 포인터는 안에 존재하든 밖에 존재하든 연산이 가능하기 때문이다.      
+   
+## 4.2. 객체 배열과 객체 포인터 배열   
+**클래스를 대상으로 배열 생성**
+```
+Person arr[3];
+Person * parr = new Person[3];
+```
+객체 배열 : 배열 생성시에 객체도 한번에 생성된다.
+**객체 포인터 배열**
+```
+Person * arr[3];
+arr[0] = new Person(name,age);
+arr[1] = new Person(name,age);
+arr[2] = new Person(name,age);
+```
+객체 포인터 배열 : 변수를 생성하고 따로 객체를 할당해주어야 한다.   
+   
+**우리는 객체 관련 배열을 선언할 때에는 객체 배열을 선언할지,          
+아니면 객체 포인터 배열을 선언할지를 먼저 결정해야 한다.**       
+     
+## 4.3.this 포인터의 이해   
+   
+![cpp21](https://user-images.githubusercontent.com/50267433/74512022-b15c1e80-4f4a-11ea-8fd4-98ba22283229.PNG)
+  
+this 포인터는 그 값이 결정되어 있지 않은 포인터이다.     
+왜냐하면 this 포인터는 **this가 사용된 객체 자신의 주소값**을 정보로 담고 있는 포인터이기 때문이다.    
+this를 반환할 때에는 클래스에 맞는 포인터형을 반환해주어야 한다.     
+
+## 4.3.this 포인터의 활용  
+      
+![cpp22](https://user-images.githubusercontent.com/50267433/74512204-19126980-4f4b-11ea-8ed9-ba68441f128d.PNG)   
+        
+```
+TwoNumber(int num1, int num2){
+	this -> num1 = num1
+	this -> num2 = num2
+}
+```
+```this->num1```은 멤버변수 num1을 의미한다.     
+코드를 보면 함수의 매개변수의 이름을 멤버변수의 이름과 동일하게 정의했다.    
+이럴경우 num1 과 num2 는 지역변수로 사용이 되기 때문에 ```this``` 를 이용하여 매개변수에 접근하도록 했다.     
+이렇게 사용하는 이유는 변수명의 갯수를 줄일 수 있으며 가독성을 높여주는 장점이 있다.     
+        
+```
+TwoNumber(int num1, int num2)
+	: num1(num1), num2(num2)
+{
+}
+```
+그리고 물론 이렇게 코드를 작성해주어도 된다.   
+
+
+   
+
