Update 04 클래스의 완성.md

--- a/04 클래스의 완성.md
+++ b/04 클래스의 완성.md
@@ -415,7 +415,7 @@ arr[2] = new Person(name,age);
 this 포인터는 그 값이 결정되어 있지 않은 포인터이다.     
 왜냐하면 this 포인터는 **this가 사용된 객체 자신의 주소값**을 정보로 담고 있는 포인터이기 때문이다.    
 this를 반환할 때에는 클래스에 맞는 포인터형을 반환해주어야 한다.     
-
+   
 ## 4.3.this 포인터의 활용  
       
 ![cpp22](https://user-images.githubusercontent.com/50267433/74512204-19126980-4f4b-11ea-8ed9-ba68441f128d.PNG)   
@@ -437,8 +437,14 @@ TwoNumber(int num1, int num2)
 {
 }
 ```
-그리고 물론 이렇게 코드를 작성해주어도 된다.   
-
-
+그리고 물론 이렇게 코드를 작성해주어도 된다. (단, 추천하지는 않는다)   
+      
+## 4.4.self-reference의 반환          
    
-
+![cpp23](https://user-images.githubusercontent.com/50267433/74513285-8f17d000-4f4d-11ea-83d4-0d0bd63cbb7d.PNG)    
+      
+메소드를 반환할 때 ```return * this```그리고 ``` SelfRef&``` 참조자로 반환하고 있다.      
+this는 포인터 변수로서 ```*```를 사용하면 해당 값을 반환하는데 이는 객체를 의미한다.   
+그리고 참조자는 이러한 객체 자체를 참조하여 별다른 추가 구문 없이 바로 객체에 접근할 수 있게 해준다.   
+   
+그 전에는 포인터형으로 반환하였기에 받을 경우에도 포인터 변수를 선언해주고 ```->```로 접근했었다.   
