Update 05 복사 생성자.md

--- a/05 복사 생성자.md
+++ b/05 복사 생성자.md
@@ -1,1 +1,68 @@
+05 복사 생성자
+=======================
+# 1. '복사 생성자'와의 첫 만남
+**기본 자료형**
+```
+int a = 10;
+int b = a; (O)
+```
+기본 자료형 같은 경우 변수를 이용하여 대입을 할 수 있다.      
+        
+**객체 자료형**
+```
+Class classA; 
+Class classB = classA; (X)
+```
+하지만 객체는 객체 변수를 이용하여 대입을 진행할 수 없다.          
+이는 객체의 내부구조가 다양하게 있으므로 경우의 수가 너무 많아져 갑의 대입을 진행할 수 없다.     
+   
+쉽게 결정할 수 없는 일이기 때문에 C++은  대입 연산시 발생하는 동작을 개발자가 직접 정의하라고 말하고 있다.  
+(대입 연산에 대한 결과를 우리에게 위임하는 것이라고 보면 된다.)   
 
+C++ 은 재미있는 것이 초기화랑 대입을 구분지어서 정의할 수 있다.
+```
+ABC abc;
+
+//1)
+ABC abc2 = abc;
+
+//2)
+ABC abc2;
+abc2 = abc;
+```    
+1. 1번은 객체 생성과 동시에 초기화를 진행해주는 것이다.      
+2. 2번은 객체를 생성하고 새로운 객체를 대입해주는 것이다.(즉 이미 생성된 객체간의 대입이다)    
+     
+복사 생성자는 1번 동작에 대한 결과를 정의하는 것이 복사 생성자를 정의하는 것이다.     
+(즉, 생성과 동시에 초기화를 진행했을 때의 방법을 정의하는 것이다)     
+
+
+
+## 1.1. 소 주제
+### 1.1.1. 내용1
+```
+내용1
+```
+## 1.2. 소 주제
+### 1.2.1. 내용1
+```
+내용1
+```
+
+***
+# 2. 대주제
+> 인용
+## 2.1. 소 주제
+### 2.1.1. 내용1
+```
+내용1
+```   
+
+***
+# 3. 대주제
+> 인용
+## 3.1. 소 주제
+### 3.1.1. 내용1
+```
+내용1
+```
