Update 05 복사 생성자.md

--- a/05 복사 생성자.md
+++ b/05 복사 생성자.md
@@ -35,7 +35,7 @@ abc2 = abc;
      
 복사 생성자는 1번 동작에 대한 결과를 정의하는 것이 복사 생성자를 정의하는 것이다.     
 (즉, 생성과 동시에 초기화를 진행했을 때의 방법을 정의하는 것이다)     
-
+    
 ## 1.1. C++ 스타일의 초기화  
 **C 스타일**
 ```
@@ -90,14 +90,46 @@ int main(void)
                         
 **C++에서는 동일한 클래스를 매개변수를 받는 생성자를 복사 생성자라고 한다**          
 또한 동일한 클래스를 매개변수로 받는 생성자를 정의하지 않은 경우 디폴트 복사 생성자가 호출된다.             
+   
+![cpp26](https://user-images.githubusercontent.com/50267433/74527891-373b9200-4f6a-11ea-898c-5ccec404ee84.PNG)
+    
 디폴트 복사 생성자는 동일한 클래스의 객체가 들어오면 같은 변수끼리의 짝을 맞춰서 복사하여 할당을 해준다.             
 **복사하여 할당해주는 이유는 원본이 변경이 되지 않아야 하가 때문이고 const 선언의 이유도 이와 마찬가지이다.**   
-         
+           
 ![cpp25](https://user-images.githubusercontent.com/50267433/74527694-b5e3ff80-4f69-11ea-89d2-3beb7c159a39.PNG)
       
 위와 같이 직접 정의해준다면 사용자가 원하는 방식으로 복사 생성자를 정의할 수 있다.         
+ 
+## 1.2. 키워드 explicit
+```
+SoSimple sim2 = sim1 ----> SoSimple sim2(sim1);
+```   
+기존 객체 초기화 과정은 묵시적 형 변환을 통해 이루어졌다.    
+하지만 **explicit**으로 선언을 하게 된다면 이러한 묵시적 형 변환을 막을 수 있다.    
+     
+**1번 복사 생성자**   
+```
+explicit SoSimple(const SoSimple & copy)
+        : num1(copy.num1), num2(copy.num2)
+{
+        // empty
+}
+```
+**2번 일반 생성자**   
+```
+class AAA
+{
+private:
+        int num;
+public:
+        explicit AAA(int n) : num(n) {}
+        . . . . .
+};
+```
+이렇게 클래스의 복사 생성자나 일반 생성자를 explicit로 선언하면    
+```Class class = 3``` 이런식으로 생성은 불가능하고 ```Class class(3)``` 이렇게 생성은 가능하다.     
 
-      
+
       
      
 
