Update 05 복사 생성자.md

--- a/05 복사 생성자.md
+++ b/05 복사 생성자.md
@@ -129,36 +129,64 @@ public:
 이렇게 클래스의 복사 생성자나 일반 생성자를 explicit로 선언하면    
 ```Class class = 3``` 이런식으로 생성은 불가능하고 ```Class class(3)``` 이렇게 생성은 가능하다.     
 
-
-      
-     
-
-
-
-
-
-
-
-
-
-### 1.1.1. 내용1
-```
-내용1
-```
-## 1.2. 소 주제
-### 1.2.1. 내용1
-```
-내용1
-```
-
 ***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
+# 2. '깊은 복사'와 '얕은 복사'
+## 2.1. 디폴트 복사 생성자의 문제      
+![cpp27](https://user-images.githubusercontent.com/50267433/74532277-2262fc80-4f72-11ea-8573-13205fcd8656.PNG)   
+            
+**일반 생성자만 정의되어 있다.**   
 ```
-내용1
-```   
+Person(char * myname, int myage) 
+{       
+        int len = strlen(myname)+1;
+        name = new char[len];
+        strcpy(name, myname);
+        age = myage;
+}
+```
+위 코드는 직접 비교하는 코드가 아니라 맨 처음 생성했을 때 실행되는 코드이다.   
+이제 객체 대입을 진행하게 되면 클래스의 생성자는 **위 코드밖에 없으니**  
+디폴트 복사 생성자가 생성되어 호출이 된다.    
+
+디폴트 복사 생성자는 짝이 맞는 멤버 변수끼리 매칭시켜서 값을 복사해서 할당해준다.     
+여기서 문제점이 1번 객체와 같이 포인터로 어떠한 메모리를 가리키고 있으면    
+복사된 2번 객체도 마찬가지로 1번 객체가 가리키고 있는 메모리를 가리키고 있다.     
+      
+여기서 문제점은 만약 1번이나 2번에서 가리키고 있는 메모리를 해제하게 된다면    
+나머지 객체는 해당 메모리에 접근할 수 없게 되고 이는 객체간의 종속성을 매우 높이는 위험한 일이다.     
+그리고 이러한 복사가 진행되는 구조를 **얕은 복사**라고 한다.       
+   
+## 2.2. 깊은 복사 정의하기   
+   
+![cpp28](https://user-images.githubusercontent.com/50267433/74532880-a7024a80-4f73-11ea-978a-f531e2bb9d72.PNG)
+     
+**깊은 복사 코드**   
+```
+Person(const Person& copy) : age(copy.age)
+{
+        name = new char[strlen(copy.name)+1];
+        strcpy(name, copy.name)
+}
+```
+복사 생성자를 직접 정의해줌으로써 위에서 말한 얕은 복사에 대한 문제점을 방지할 수 있다.    
+코드를 보면 참조자 copy로 직접 객체를 불러오지만 ```참조자.변수```구조를 이용하여 
+메모리 접근이 아닌 값을 초점으로 반환을 하여 이러한 얕은 복사를 예방하였다.
+    
+## 2.3. 정리 
+```
+1.      -> 생성자로 생성
+        -> 객체 = 객체 진행
+        -> 복사 생성자가 없어 디폴트 복사 생성자 호출
+        -> 멤버 변수가 포인터이므로 메모리/변수타입 가져옴
+        -> 이는 기존 객체가 가리키는 것과 동일한 메모리를 가리키게 됨
+        
+2.      -> 생성자로 생성
+        -> 객체 = 객체 진행
+        -> 복사 생성자 호출되어 같은 클래스의 객체를 매개변수로 가져옴
+        -> 매개변수의 정보를 이용하여 새로운 char[] 만들고 값을 복사해옴(메모리 복사x)
+        -> 이는 기존 객체가 가리키는 것과 다른 메모리를 가리키게 됨
+```
+
 
 ***
 # 3. 대주제
