Update 05 복사 생성자.md

--- a/05 복사 생성자.md
+++ b/05 복사 생성자.md
@@ -186,12 +186,51 @@ Person(const Person& copy) : age(copy.age)
         -> 매개변수의 정보를 이용하여 새로운 char[] 만들고 값을 복사해옴(메모리 복사x)
         -> 이는 기존 객체가 가리키는 것과 다른 메모리를 가리키게 됨
 ```
-
-
+  
 ***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
+# 3. 복사 생성자의 호출 시점       
+## 3.1. 복사 생성자의 호출되는 시점
+   
+![cpp29](https://user-images.githubusercontent.com/50267433/74535577-6c031580-4f79-11ea-900c-4a9ef2fa03e1.PNG)   
+   
+만약에 A 클라스 객체를 매개변수로 받는 메소드가 있다고 가정을 해보자
+```
+A function(A aclass){
+        reutrn aclass;
+}
+```
+그리고 이러한 메소드를 호출하는 구문도 필요하다
+```
+A a;
+A aa = function(a);
+```
+이때 진행되는 과정은 아래에 기술하겠다.
+```
+1. A aclass = a 형태가 되므로 복사 생성자를 호출하는 복사가 이루어진다.  
+2. 복사가 된 aclass를 리턴을 진행을 하는데 aclass는 지역변수이다.
+3. 사실 return을 진행하면 해당 값과 똑같은 메모리 구조를 만들고 retunrn 하려는 대상을 대입하는 구조이기에
+4. A ??? = aclass가 진행되고 여기서 또 복사 생성자를 호출하는 복사가 이루어진다.   
+5. aa = ?? 구조가 되었고 이는 또 복사 생성자를 호출하는 복사가 이루어진다.  
+```
+     
+![cpp30](https://user-images.githubusercontent.com/50267433/74535666-a8cf0c80-4f79-11ea-991f-fec49becabe6.PNG)
+   
+위 그림에서는 매개변수의 복사와 오른쪽 동작 절차를 이해하자 (특히 복사 생성자를 호출하는 것을)   
+     
+![cpp31](https://user-images.githubusercontent.com/50267433/74535772-e59b0380-4f79-11ea-8012-99225ed79dea.PNG)   
+          
+위 그림에서는 반환과 바로 재사용에 관한 절차를 이해하자       
+참고로 처음 SimpleFuncOb는 새로운 객체를 생성하지만 복사한 객체를 대상으로 진행하기에        
+마지막에 showData를 진행해도 전혀 다른 객체이므로 변화를 주지 못했다.(위 복사객체는 라인이 끝나면 소멸된다.)      
+         
+## 3.2. 반환할 때 만들어진 객체의 소멸 시점       
+![cpp32](https://user-images.githubusercontent.com/50267433/74536016-8ab5dc00-4f7a-11ea-94ff-0969b1f1418b.PNG)   
+         
+앞서 봤듯이 반환된 객체를 따로 저장할 공간을 지정해주지 않았기에 해당 객체는 라인이 끝나면 소멸된다.  
+그리고 이렇게 한 라인에만 존재하는 데이터를 임시 객체라 한다.    
+이렇게 반환된 값을 참조자나 포인터를 이용할 경우 계속 사용할 수 있게 된다.   
+그리고 이러한 반환된 값도 일단 익명 변수에 반환되는 것이므로 const 참조자를 사용할 수 있다.  
+
 ### 3.1.1. 내용1
 ```
 내용1
