Update 05 복사 생성자.md

--- a/05 복사 생성자.md
+++ b/05 복사 생성자.md
@@ -225,13 +225,10 @@ A aa = function(a);
          
 ## 3.2. 반환할 때 만들어진 객체의 소멸 시점       
 ![cpp32](https://user-images.githubusercontent.com/50267433/74536016-8ab5dc00-4f7a-11ea-94ff-0969b1f1418b.PNG)   
-         
-앞서 봤듯이 반환된 객체를 따로 저장할 공간을 지정해주지 않았기에 해당 객체는 라인이 끝나면 소멸된다.  
-그리고 이렇게 한 라인에만 존재하는 데이터를 임시 객체라 한다.    
-이렇게 반환된 값을 참조자나 포인터를 이용할 경우 계속 사용할 수 있게 된다.   
-그리고 이러한 반환된 값도 일단 익명 변수에 반환되는 것이므로 const 참조자를 사용할 수 있다.  
-
-### 3.1.1. 내용1
-```
-내용1
-```
+           
+앞서 봤듯이 반환된 객체를 따로 저장할 공간을 지정해주지 않았기에 해당 객체는 라인이 끝나면 소멸된다.      
+그리고 이렇게 한 라인에만 존재하는 데이터를 임시 객체라 한다.        
+이렇게 반환된 값을 참조자나 포인터를 이용할 경우 계속 사용할 수 있게 된다.        
+(반환된 데이터도 리터럴 값이므로 const 참조자를 사용하여 저장할 수 있다.)         
+그래서 위 코드를 보면 end of main을 호출하고 프로그램 종료시 같이 종료된 것을 알 수 있다.   
+     
