--- a/07 상속의 이해.md
+++ b/07 상속의 이해.md
@@ -1,6 +1,6 @@
 07 상속의 이해
 =======================
-# 1. 상속에 들어가깅 앞서
+# 1. 상속에 들어가기에 앞서
 ## 1.1. 문제의 제시를 위한 시나리오의 도입
 프로그램 전체 기능을 처리를, 프로그램의 흐름을 담당하는 클래스를 가리켜 컨트롤 클래스라 한다.     
 (클래스의 멤버를 이용해가지고 기능을 만들고 이러한 기능들을 모아놓은 집합체라 볼 수 있다.)     
