Update 07 상속의 이해.md

--- a/07 상속의 이해.md
+++ b/07 상속의 이해.md
@@ -125,3 +125,27 @@ class derived : private Base
 private 보다 접근의 범위가 넓은 멤버는 private로 상속한다.      
 단, private는 접근 불가로 상속한다.       
           
+***
+# 4. 상속을 위한 조건    
+## 4.1. 상속의 기본 조건인 IS-A 관계의 성립   
+```
+전화기 -> 무선 전화기
+컴퓨터 -> 노트북 컴퓨터
+```
+```
+무선 전화기는 일종의 전화기입니다.  
+노트북 컴퓨터는 일종의 컴퓨터입니다.  
+```
+
+무선 전화기는 전화기의 기본 기능에 새로운 특성이 추가된 것이다.  
+노트북 컴퓨터는 컴퓨터의 기본 기능에 새로운 특성이 추가된 것이다.  
+```
+무선 전화기 is a 전화기
+노트북 컴퓨터 is a 컴퓨터
+```
+이렇듯 is-a 관계는 논리적으로 상속을 기반으로 표현하기에 매우 적절하다.  
+```
+전화기 is a 무선 전화기
+컴퓨터 is a 노트북 컴퓨터
+```
+반대로 배치를 해보자면 모든 전화기는 무선 전화기가 아니므로 이러한 관계는 성립하지 않는다.  
