Update 07 상속의 이해.md

--- a/07 상속의 이해.md
+++ b/07 상속의 이해.md
@@ -138,6 +138,7 @@ private 보다 접근의 범위가 넓은 멤버는 private로 상속한다.
 ```
 무선 전화기는 전화기의 기본 기능에 새로운 특성이 추가된 것이다.  
 노트북 컴퓨터는 컴퓨터의 기본 기능에 새로운 특성이 추가된 것이다.  
+이렇게 아래로 내려오는 과정일 수록 객체가 더 구체화 된다고 볼 수 있다.
 ```
 무선 전화기 is a 전화기
 노트북 컴퓨터 is a 컴퓨터
