--- a/07 상속의 이해.md
+++ b/07 상속의 이해.md
@@ -136,9 +136,9 @@ private 보다 접근의 범위가 넓은 멤버는 private로 상속한다.
 무선 전화기는 일종의 전화기입니다.  
 노트북 컴퓨터는 일종의 컴퓨터입니다.  
 ```
-무선 전화기는 전화기의 기본 기능에 새로운 특성이 추가된 것이다.  
-노트북 컴퓨터는 컴퓨터의 기본 기능에 새로운 특성이 추가된 것이다.  
-이렇게 아래로 내려오는 과정일 수록 객체가 더 구체화 된다고 볼 수 있다.
+무선 전화기는 전화기의 기본 기능에 새로운 특성이 추가된 것이다.    
+노트북 컴퓨터는 컴퓨터의 기본 기능에 새로운 특성이 추가된 것이다.     
+이렇게 아래로 내려오는 과정일 수록 객체가 더 구체화 된다고 볼 수 있다.    
 ```
 무선 전화기 is a 전화기
 노트북 컴퓨터 is a 컴퓨터
@@ -150,3 +150,55 @@ private 보다 접근의 범위가 넓은 멤버는 private로 상속한다.
 ```      
 반대로 배치를 해보자면 모든 전화기는 무선 전화기가 아니므로 이러한 관계는 성립하지 않는다.      
 is-a 관계에서는 a 해당하는 객체가 부모 객체가 되어야 한다.        
+  
+## 4.2. HAS-A 관계를 상속으로 구성하려면   
+```
+Police has a Gun
+
+경찰은 총을 소유한다. 
+```
+```
+class Police : public Gun 
+{
+     .    .    .    .    .
+}
+```
+has a 관계도 상속으로 구현은 가능하다.         
+하지만 이러한 경우 Police와 Gun은 강한 연결성을 띄게 된다.       
+따라서 총을 소유하고 있지 않은 경찰이나, 다른 무기를 소유하는 경찰을 표현하기가 쉽지 않아진다.       
+             
+그렇기 때문에 **has-a 관계를 가지고 상속을 진행하기는 조금 어렵다.**            
+(이러한 has-a 관계는 다중 상속이 필요한 경우가 많아서 단점이 많아진다.)                      
+(참고로 자바는 단일 상속만 되고 C++은 다중상속을 지원해준다.)          
+      
+## 4.3. HAS-A 관계는 포함으로 표현한다.
+**Police**
+```
+class Police
+{
+private: 
+     int handcuffs;
+     Gun * pistol;
+public:
+     Police(int bnum, int bcuff) // bnum은 총알 갯수
+          : handcuffs(bcuff)
+     {
+          if(bnum > 0)
+          {
+               pistol = new Gun(bnum);
+          }
+          else
+          {
+               pistol = NULL;
+          }
+     }     
+     .    .    .    .    .    .    .
+}
+```
+has-a 관계를 포함의 형태로 표현하면,     
+두 클래스간 연결성은 낮아지며, 변경 및 확장이 용이해진다.     
+      
+즉, 총을 소유하지 않은 경찰의 표현이 쉬워지고,        
+추가로 무기를 소유하는 형태로의 확장도 간단해진다.     
+      
+  
