Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -1,11 +1,43 @@
-
-제목
+08 상속과 다형성
 =======================
-> 인용
+# 1. 객체 포인터의 참조 관계
+일반 사람하고 축구선수가 있다.      
+축구선수는 사람을 상속받은 았다.       
+이때 축구선수는 사람되고 축구선수도 될 수 있다.      
+      
+이러한 현실세계의 관점도 프로그램에서 적용될 수가 있다.               
+즉, 사람 포인터 변수로 축구선수 객체를 가리킬 수 있고         
+이를 다시 말하면 **부모 클래스 포인터 변수로 자식 객체를 참조할 수 있다.**.  
+    
+단, 이러한 관점에서 사람 포인터를 통해 가리 킨 것이므로 사람 멤버만 접근이 가능하다.   
+        
+## 1.1. 객체의 주소 값을 저장하는 객체 포인터 변수.  
+c++ 에서, AAA형 포인터 변수는 AAA객체 또는 AAA를 직접 혹은 간접적으로 상속하는 모든 객체를 가리킬 수 있다.   
+(객체의 주소 값으 저장할 수 있다.)      
 
-# 1. 대 주제
-> 인용
-## 1.1. 소 주제
+```
+class Student : public Person
+{
+  . . . . . 
+}
+class PartTimeStudent : public Student
+{
+  . . . . . 
+}
+```
+```
+Person * ptr = new Person();
+Person * ptr = new Student();
+Person * ptr = new PartTimeStudent();
+
+Student * ptr = new Student();
+Student * ptr = new PartTimeStudent();
+
+PartTimeStudent * ptr = new PartTimeStudent();
+```
+앞서 말했듯이 포인터 변수의 자료형에 관한 멤버만 사용할 수 있다.      
+그런데 Student 같은 경우로 보자면 Person 과 Student 멤버를 사용할 수 있는 것이다.   
+
 ### 1.1.1. 내용1
 ```
 내용1
