Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -11,7 +11,7 @@
     
 단, 이러한 관점에서 사람 포인터를 통해 가리 킨 것이므로 사람 멤버만 접근이 가능하다.   
         
-## 1.1. 객체의 주소 값을 저장하는 객체 포인터 변수.  
+## 1.1. 객체의 주소 값을 저장하는 객체 포인터 변수  
 c++ 에서, AAA형 포인터 변수는 AAA객체 또는 AAA를 직접 혹은 간접적으로 상속하는 모든 객체를 가리킬 수 있다.   
 (객체의 주소 값으 저장할 수 있다.)      
 
@@ -37,12 +37,8 @@ PartTimeStudent * ptr = new PartTimeStudent();
 ```
 앞서 말했듯이 포인터 변수의 자료형에 관한 멤버만 사용할 수 있다.      
 그런데 Student 같은 경우로 보자면 Person 과 Student 멤버를 사용할 수 있는 것이다.   
-
-### 1.1.1. 내용1
-```
-내용1
-```
-## 1.2. 소 주제
+    
+## 1.2. 
 ### 1.2.1. 내용1
 ```
 내용1
