--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -70,19 +70,23 @@ public:
       
       void ShowAllSalaryInfo() const
       {
+            /* Permanent에 한해서만 가능하니 에러가 난다
             for(int i = 0 ; i < empNum; i++)
             {
                   empList[i] -> ShowSalaryInfo();
             }
+            */
       }
       void SHowTotalSalary() const
       {     
+            /* Permanent에 한해서만 가능하니 에러가 난다
             int sum = 0;
             for(int i = 0 ; i < empNum; i++)
             {
                   sum += empList[i]->GetPay();
             }
             cout<<"Salary Sum: "<<sum<<endl;
+            */
       }
       ~EmployeeHandler()
       {
