Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -70,7 +70,7 @@ public:
       
       void ShowAllSalaryInfo() const
       {
-            /* Permanent에 한해서만 가능하니 에러가 난다
+            /* PermanentWorker에 한해서만 가능하니 에러가 난다
             for(int i = 0 ; i < empNum; i++)
             {
                   empList[i] -> ShowSalaryInfo();
@@ -79,7 +79,7 @@ public:
       }
       void SHowTotalSalary() const
       {     
-            /* Permanent에 한해서만 가능하니 에러가 난다
+            /* PermanentWorker에 한해서만 가능하니 에러가 난다
             int sum = 0;
             for(int i = 0 ; i < empNum; i++)
             {
