Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -117,6 +117,9 @@ Override를 진행하여 이름이 겹쳐졌기에 이전에 사용한 메소드
 ```클래스::메소드()```로 사용을 해야 한다.                 
 이렇게 사용하지 않을 경우 현재 클래스의 메소드를 호출하는 것이 되기 때문이다.        
      
+또 재미있는점은 ```ShowSalaryInfo()```는 오버라이딩 전과 완전히 똑같이 생겼지만 이렇게 오버라이딩을 한 이유는   
+PermanentWorker 클래스 내에서 ```ShowSalaryInfo()```를 실행하는 것이므로      
+PermanentWorker의 ```getPay()```를 호출하는 것으로 동작하기 때문에 오버라이딩을 진행했다.    
 ***  
 # 2. 대주제
 > 인용
