--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -118,18 +118,67 @@ Override를 진행하여 이름이 겹쳐졌기에 이전에 사용한 메소드
 이렇게 사용하지 않을 경우 현재 클래스의 메소드를 호출하는 것이 되기 때문이다.        
      
 또 재미있는점은 ```ShowSalaryInfo()```는 오버라이딩 전과 완전히 똑같이 생겼지만 이렇게 오버라이딩을 한 이유는   
-PermanentWorker 클래스 내에서 ```ShowSalaryInfo()```를 실행하는 것이므로      
-PermanentWorker의 ```getPay()```를 호출하는 것으로 동작하기 때문에 오버라이딩을 진행했다.    
+PermanentWorker 클래스 내에서 ```ShowSalaryInfo()```를 실행하는 것이므로        
+PermanentWorker의 ```getPay()```를 호출하는 것으로 동작하기 때문에 오버라이딩을 진행했다.      
+    
 ***  
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
+# 2. 가상 함수     
+## 2.1. 기초 클래스의 포인터 객체를 참조하면,   
 ```
-내용1
-```   
+C++ 컴파일러는 포인터 연산의 가능성 여부를 판단할 때,   
+포인터의 자료형을 기준으로 판단하지, 실제 가리키는 객체의 자료형을 기준으로 판단하지 않는다.
+따라서 포인터형에 해당하는 클래스의 멤버에만 접근이 가능하다.   
+```
+    
+![cpp37](https://user-images.githubusercontent.com/50267433/74623233-274cc980-5187-11ea-9134-2c5be4855bda.PNG)
+       
+       
+코드를 보면 객체의 자료형을 기준으로 판단하기에   
+   
+1. 다형성으로 인한 포인터 변수의 참조는 가능하지만 자식 객체의 멤버에 접근 못하며       
+2. 자식클래스 포인터 변수가 부모 클래스 객체 할당에 대한 에러를 표시할 수 있다.     
+         
+![cpp38](https://user-images.githubusercontent.com/50267433/74623438-ff119a80-5187-11ea-858d-c07d71396ba7.PNG)   
+     
+## 2.2. 함수의 오버라이딩과 포인터 형      
+   
+![cpp39](https://user-images.githubusercontent.com/50267433/74623576-76dfc500-5188-11ea-831f-cebf3842f6f4.PNG)   
 
-***
+C++ 과 자바의 차이점이 이러한 오버라이딩에서 나타는데     
+우선 자바 같은 경우 오버라이딩이 될 경우 참조한 객체의 메소드를 호출하지만  
+C++ 에서는 포인터형의 메소드를 호출하게 된다.    
+     
+즉 Third 객체를 First가 참조하게 되면    
+자바는 Third 객체가 오버라이딩한 메소드가 호출 되는 것이고   
+C++은 First의 오버라이딩이 되지 않은 메소드가 호출되는 것이다.   
+
+           
+## 2.3. 가상함수   
+C++에서도 자바처럼 객체의 함수를 사용하고 싶을 때는 어떻게 할까?   
+그럴 때 사용하는 것이 바로 **가상함수**이다.    
+       
+![cpp40](https://user-images.githubusercontent.com/50267433/74623844-8c092380-5189-11ea-83a1-1dc18ae87d2a.PNG)   
+       
+문법은 간단하다 오버라이딩 대상이 되는 함수들에 ```virtual``` 이라는 키워드를 작성해주면 된다.    
+(virtual은 대상이 되는 클래스 내의 멤버에도 정의하고 호출문에도 정의해야 한다.)   
+이렇게 작성이 되면 객체가 가리키는 마지막 함수를 호출한다.     
+(만약 Third 에서 오버라이딩 안한다면? -> Second 객체의 함수를 호출할 것이다.)         
+               
+현 상황에서의 EmployeeManager 클래스는 모든 객체를 Employee 객체로 간주한다.         
+따라서 호출하는 함수도 Employee 객체의 멤버 함수이다.        
+하지만 이러한 가상함수의 특성을 이용해서 앞서 작성한 Employee를 수정해서 해결할 수 있다.        
+   
+## 2.4. 급여관리 확장성 문제의 해결과 상속의 이유         
+        
+![cpp41](https://user-images.githubusercontent.com/50267433/74624388-8b718c80-518b-11ea-88ae-6d7acfdd56b9.PNG)     
+        
+GetPay 함수와 ShowSalaryInfo 함수를 Virtual로 선언하였으므로,     
+EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일지라도     
+실제 호출되는 함수는 각 포인터가 가리키는 객체의 마지막 오버라이딩 함수이다.           
+       
+이렇듯 상속은 연관된 일련의 클래스들에 대헤 공통의 규약을 적용할 수 있게 해준다.      
+      
+*** 
 # 3. 대주제
 > 인용
 ## 3.1. 소 주제
