--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -186,7 +186,10 @@ EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일
 ![cpp42](https://user-images.githubusercontent.com/50267433/74632400-a0a5e580-51a2-11ea-8185-8ec14bb89586.PNG)       
 몸체가 정의되지 않은 함수를 가리켜 순수 가상함수라 하며(추상 메소드라 해도 된다)             
 하나 이상의 순수 가상함수를 멤버로 두어서 객체 생성이 불가능한 클래스를 가리켜 추상클래스라 한다.         
-(오버라이딩의 관계를 목적으로 정의된 함수들이므로 몸체부분의 정의는 의미가 없다)      
+(오버라이딩의 관계를 목적으로 정의된 함수들이므로 몸체부분의 정의는 의미가 없다)          
+   
+오버라이딩의 관계를 목적으로 정의되었다는 것은 부모 클래스에는 아무 정의도 하지 않지만     
+자식 클래스에는 메소드의 구조를 이용해서 새롭게 정의하기 때문에 오버라이딩 관계라 한다.      
    
 ## 2.6. 다형성      
 ![cpp43](https://user-images.githubusercontent.com/50267433/74632666-380b3880-51a3-11ea-9a9b-2ebc37d3a994.PNG)    
