Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -49,9 +49,9 @@ PartTimeStudent * ptr = new PartTimeStudent();
       
 ![cpp33](https://user-images.githubusercontent.com/50267433/74602112-e0a89200-50e8-11ea-9c17-7b5a82e280ac.PNG)      
         
-모든 클래스의 객체를 Employee 클래스의 객체로 간주할 수 있는 기반을 마련          
-            
-컨트롤러 클래스 입장에서는 모든 객체를 Employee 객체로 간주해도 문제가 되지 않는다.           
+모든 클래스의 객체를 Employee 클래스의 객체로 간주할 수 있는 기반을 마련             
+Employee 클래스는 실제로는 객체화를 시키지 않을 목적으로 작성된 클래스이지만      
+컨트롤러 클래스 입장에서는 모든 객체를 Employee 객체로 간주해도 문제가 되지 않는다.                     
 ### 1.2.1. Contoller
 ```
 class EmployeeHandler
@@ -184,13 +184,16 @@ EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일
     
 ## 2.5. 순수 가상함수와 추상 클래스                  
 ![cpp42](https://user-images.githubusercontent.com/50267433/74632400-a0a5e580-51a2-11ea-8185-8ec14bb89586.PNG)       
-몸체가 정의되지 않은 함수를 가리켜 순수 가상함수라 하며(추상 메소드라 해도 된다)             
+```virtual``` 키워드 및 몸체가 정의되지 않은 함수를 가리켜 **순수 가상 함수**라 하며(추상 메소드라 해도 된다)             
 하나 이상의 순수 가상함수를 멤버로 두어서 객체 생성이 불가능한 클래스를 가리켜 추상클래스라 한다.         
-(오버라이딩의 관계를 목적으로 정의된 함수들이므로 몸체부분의 정의는 의미가 없다)          
-   
-오버라이딩의 관계를 목적으로 정의되었다는 것은 부모 클래스에는 아무 정의도 하지 않지만     
-자식 클래스에는 메소드의 구조를 이용해서 새롭게 정의하기 때문에 오버라이딩 관계라 한다.      
-   
+(오버라이딩의 관계를 목적으로 정의된 함수들이므로 몸체부분의 정의는 의미가 없다)            
+        
+오버라이딩의 관계를 목적으로 정의되었다는 것은 부모 클래스에는 아무 정의도 하지 않지만           
+자식 클래스에는 메소드의 구조를 이용해서 새롭게 정의하기 때문에 오버라이딩 관계라 한다.            
+                   
+참고로 ```=0```구조는 순수 가상 함수라 부르며 몸체를 생략하겠다는 의미를 가진다.    
+이렇게 작성하면 Employee 클래스를 객체화 할 수 없으니 더욱 안전한 코드를 작성할 수 있다.      
+그리고 이렇게 작성하는 것이 가상 함수와 순수 가상 함수를 구분하기가 더 쉬워져서 좋을 것이다.                     
 ## 2.6. 다형성      
 ![cpp43](https://user-images.githubusercontent.com/50267433/74632666-380b3880-51a3-11ea-9a9b-2ebc37d3a994.PNG)    
      
@@ -203,8 +206,12 @@ EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일
       
 ```ptr->Simplefunc```함수의 호출이 다형성의 예이다.            
 문장은 같지만 ptr이 가리키는 객체에 따라 실행 결과가 다르기 때문이다.        
-    
-*** 
+          
+우리는 이제 상속에 대해서 정의를 내릴 수 있다.           
+많은 사람들이 말을 한다. 상속은 코드의 재활용이라고......              
+하지만 이번 공부를 통해 상속은 **연관된 클래스들간의 공통의 규약**으로 이해할 수 있을 것이다.     
+       
+***  
 # 3. 가상 소멸자와 참조자의 참조 가능성  
 > 인용
 ## 3.1. 소 주제
