Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -212,9 +212,18 @@ EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일
 하지만 이번 공부를 통해 상속은 **연관된 클래스들간의 공통의 규약**으로 이해할 수 있을 것이다.     
        
 ***  
-# 3. 가상 소멸자와 참조자의 참조 가능성  
-> 인용
-## 3.1. 소 주제
+# 3. 가상 소멸자와 참조자의 참조 가능성     
+## 3.1. 가상 소멸자   
+        
+![cpp44](https://user-images.githubusercontent.com/50267433/74634870-237d6f00-51a8-11ea-9feb-a206d7cc7a72.PNG)    
+             
+우선 코드분석을 해보자면 First 자료형으로 Third 객체를 참조하고 있는 형태이다.           
+그리고 이 Third 객체를 삭제할 것인데 생성자와 마찬가지로 ```virtual```이 없으면 호출이 되지 않는다.             
+즉 Fisrt 클래스의 소멸자만 호출이 된다.              
+그렇기에 우리는 ```virtual```키워드를 사용하여 **포인터형에 상관없이 모든 소멸자를 호출하도록 해야한다.**        
+(다형성 구조로 정의가 되었을 때)   
+   
+소멸자를 가상으로 선언함으로써 각각의 생성자 내에서 할당한 메모리 공간을 효율적으로 해제할 수 있다.    
 ### 3.1.1. 내용1
 ```
 내용1
