Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -224,6 +224,11 @@ EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일
 (다형성 구조로 정의가 되었을 때)   
    
 소멸자를 가상으로 선언함으로써 각각의 생성자 내에서 할당한 메모리 공간을 효율적으로 해제할 수 있다.    
+
+1. 삭제할 때 virtual인 마지막 가상 소멸자를 삭제하려 한다.      
+2. 이때 상속 구조에 있는 기초 클래스의 소멸자들을 호출하게 된다.    
+3. 물론 기초 클래스의 마지막 소멸자도 호출한다.      
+          
 ### 3.1.1. 내용1
 ```
 내용1
