Update 08 상속과 다형성.md

--- a/08 상속과 다형성.md
+++ b/08 상속과 다형성.md
@@ -229,7 +229,14 @@ EmployeeHandler가 호출하는 함수는 Employee 클래스의 멤버 함수일
 2. 이때 상속 구조에 있는 기초 클래스의 소멸자들을 호출하게 된다.    
 3. 물론 기초 클래스의 마지막 소멸자도 호출한다.      
           
-### 3.1.1. 내용1
+## 3.2. 참조자의 참조 가능성   
 ```
-내용1
+C++에서 AAA형 포인터 변수는 AAA객체 또는 AAA를 직접 혹은 간접적으로 상속하는 모든 객체를 가리킬 수 있다.   
+(객체의 주소 값을 저장할 수 있다.)
 ```
+```
+C++에서 AAA형 참조자 변수는 AAA객체 또는 AAA를 직접 혹은 간접적으로 상속하는 모든 객체를 참조할 수 있다.   
+```
+![cpp45](https://user-images.githubusercontent.com/50267433/74635832-237e6e80-51aa-11ea-90d2-3b097604b292.PNG)
+포인터와 마찬가지로 ```virtual```을 적용하면 오버라이딩 메소드를 호출한다.         
+   
