Update 09 가상의 원리와 다중상속.md

--- a/09 가상의 원리와 다중상속.md
+++ b/09 가상의 원리와 다중상속.md
@@ -46,19 +46,20 @@ B 클래스도 상속 및 virtual 키워드를 사용했기에 V-table이 생성
 ![cpp48](https://user-images.githubusercontent.com/50267433/74701062-e321fd80-5248-11ea-8859-edfa5e6c6e41.PNG)      
           
 ***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
-```
-내용1
-```   
+# 2. 다중상속에 대한 이해      
+## 2.1. 다중상속에 대한 견해       
+**다중 상속에 대한 의견은 전반적으로 부정적이다.**     
+그러나 아주 예외적인 상황까지 부정적으로 보지는 않기 때문에 잘 배워두자     
+     
+## 2.2. 다중상속의 기본 방법
+![cpp49](https://user-images.githubusercontent.com/50267433/74701391-e964a980-5249-11ea-9b27-ed57a9707736.PNG)   
+다중상속은 말 그대로 둘 이상의 클래스를 상속하는 형태이고,             
+이로 인해서 유도 클래스의 객체는 모든 기초 클래스의 멤버를 포함하게 된다.          
+              
+우리는 상속을 공통된 규약을 정의하여 이를 활용하는 것이라 했지만            
+다중 상속은 단순히 재활용을 위해서만 사용하는 것이다.      
+     
+## 2.3. 다중상속의 모호성  
 
-***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
-### 3.1.1. 내용1
-```
-내용1
-```
+
+
