Update 09 가상의 원리와 다중상속.md

--- a/09 가상의 원리와 다중상속.md
+++ b/09 가상의 원리와 다중상속.md
@@ -60,6 +60,25 @@ B 클래스도 상속 및 virtual 키워드를 사용했기에 V-table이 생성
 다중 상속은 단순히 재활용을 위해서만 사용하는 것이다.      
      
 ## 2.3. 다중상속의 모호성  
+만약 상속한 클래스내에서 멤버들간의 이름 충돌이 일어나는 경우는?              
+```클래스::변수``` 나 ```클래스::함수```이렇게 사용해야 하는 불편함이 생긴다.       
+         
+![cpp50](https://user-images.githubusercontent.com/50267433/74705551-a4477400-5257-11ea-9063-545e4c3f7465.PNG)    
+        
+## 2.4. 더 모호한 상황      
+A클래스를 기반으로 상속받아 B클래스와 C클래스를 정의하였고  
+B클래스와 C클래스를 기반으로 D클래스를 정의했다.  
+여기서 문제점이 B와C는 둘다 A를 기반으로 클래스를 정의했기에 양측에 A클래스 관련 멤버가 있을테고  
+D클래스는 이러한 양측의 A클래스 멤버를 또 상속받을테니 어떤 측의 멤버를 사용할지 호출의 대상 파악이 안된다.  
 
+![cpp51](https://user-images.githubusercontent.com/50267433/74705648-f7b9c200-5257-11ea-851a-f5ba2ab31620.PNG)   
+     
+이러한 문제점을 해결할 수 있는 방법이 하나 있는데 바로 가상상속이다.  
+   
+## 2.5. 가상상속      
+![cpp52](https://user-images.githubusercontent.com/50267433/74705869-a9f18980-5258-11ea-948e-7300678fbec8.PNG)    
+    
+virtual 상속으로 인해서 공통의 기초 클래스의 멤버를 하나만 포함하게 된다.    
+    
 
 
