Update 10 연산자 오버로딩1.md

--- a/10 연산자 오버로딩1.md
+++ b/10 연산자 오버로딩1.md
@@ -18,7 +18,7 @@ p1 + p2 -> p1.operator+(p2);
 **그리고 C++에서는 이러한 연산이 들어 왔을 때 처리하는 메소드를 오버라이딩 해줄 수 있다.**        
   
 또한 전역함수로도 정의를 할 수 있다.   
-이럴 경우  ```operator_plus(p1,p2)```구조로 실행이 된다.        
+이럴 경우  ```operator+(p1,p2)```구조로 실행이 된다.        
    
 재미있는 점은 멤버함수나 전역함수로 정의하면 알맞은 구조로 알아서 실행해준다.     
    
@@ -150,10 +150,33 @@ const가 선언되면 그 값을 변경시킬 수 없는 상수의 형태가 된
 그렇기에 const 선언을 한 이유는 위 그림과 같이 C++에서 허용하지 않는 연산의 컴파일을 하지 않기 위해서이다.  
      
 ***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
-### 3.1.1. 내용1
+# 3. 교환법칙 문제의 해결       
+앞서 우리는 같은 자료형일 때의 계산만 처리하도록 했다.       
+그렇다면 다른 자료형일 경우는 어떻게 처리를 해주어야 할까?          
 ```
-내용1
+p1+3 -> p1.operator+(3) 
+```       
+하지만 여기서 문제가 있다.     
 ```
+3+p1 -> 3.operator+(p1) (x)   
+``` 
+피 연산자의 순서를 바꾸어도 그 결과값은 같아야 하지만      
+피 연산자중 하나가 일반 자료형일 경우 즉, 객체가 아닐 경우 멤버함수를 사용 못한다.     
+        
+그렇기에 우리는 이러한 처리를 하기 위해서 전역함수를 사용해야 한다.      
+    
+## 3.1. 자료형이 다른 두 피연산자를 대상으로 하는 연산   
+![cpp63](https://user-images.githubusercontent.com/50267433/74920609-c97ee280-540f-11ea-950a-675981f931be.PNG)   
+연산자는 교환법칙이 성립한다.    
+따라서 pos와 cpy 가 point 객체라 할 때 다음 두 연산은 모두 허용이 되어야 하며, 그 결과도 같아야 한다.
+```
+cpy = pos * 3;
+cpy = 3 * pos;
+```
+그러나 위 그림에서는 ```*``` 연산에 대해서 교환법칙을 지원하지 않는다.      
+         
+![cpp64](https://user-images.githubusercontent.com/50267433/74920617-cd126980-540f-11ea-81f7-9672d53d5860.PNG)        
+      
+우리는 이러한 문제점을 해결하기 위해 전역함수 혀앹로 오버로딩을 해주어야 한다.       
+여기서 1번째는 같은 일을 하도록 정의할 수 도 있지만      
+2번과 같이 순서를 바꾸어 멤버함수를 호출하도록 하는 형태도 좋은 방법이다.      
