Update 10 연산자 오버로딩1.md

--- a/10 연산자 오버로딩1.md
+++ b/10 연산자 오버로딩1.md
@@ -180,3 +180,20 @@ cpy = 3 * pos;
 우리는 이러한 문제점을 해결하기 위해 전역함수 혀앹로 오버로딩을 해주어야 한다.       
 여기서 1번째는 같은 일을 하도록 정의할 수 도 있지만      
 2번과 같이 순서를 바꾸어 멤버함수를 호출하도록 하는 형태도 좋은 방법이다.      
+       
+***  
+# 4. cout, cin 그리고 endl의 정체       
+## 4.1. cout과 endl 이해하기 (일반 자료형)     
+![cpp65](https://user-images.githubusercontent.com/50267433/74922063-09df6000-5412-11ea-8619-df88fb404309.PNG)      
+우리가 사용하던 cout, cin, endl에 같이 사용되는 ```<<```도 사실은 연산자 오버로딩이었다.    
+     
+![cpp66](https://user-images.githubusercontent.com/50267433/74924056-24670880-5415-11ea-81a7-8dbc02a697ef.PNG)          
+```*this``` 를 반환함으로써 연이은 오버로딩 함수 호출도 가능하다.       
+      
+## 4.2. << , >> 연산자의 오버로딩 (객체를 위한)  
+![cpp67](https://user-images.githubusercontent.com/50267433/74924777-5d53ad00-5416-11ea-9e0f-535abf55b96d.PNG)     
+객체에 대한 ```<<```, ```>>```메소드가 존재하지 않기에 우리가 직접 정의를 해주어야한다.     
+    
+     
+       
+
