Update 02 C언어 기반의 C++2.md

--- a/02 C언어 기반의 C++2.md
+++ b/02 C언어 기반의 C++2.md
@@ -284,7 +284,7 @@ int sampleFunction(int &ref){
 일반 자료형으로 반환을 하는것은 사실 **리터럴로 반환하기 때문이다.**      
 그렇기에 ```참조자 = 리터럴```이라는 공식은 **성립하지 않기 때문에 안된다.**   
     
-### 4.2.3. 일반 자료형 매개변수 & 참조자 리턴          
+### 4.2.3. 일반 자료형 매개변수 & 참조자 리턴 (가장중요)          
 ```
 int main(void){
 
@@ -298,13 +298,15 @@ int& sampleFunction(int ref){
   return ref;
 }
 ```   
-원본 메모리 자체는 소멸하지만 참조자로 리턴을 한다해도     
-함수내의 지역 변수명은 사라질지라도 메모리를 리턴하므로 상관이 없다.     
-정확히는 메모리 생성을 외부에서 했기에 메모리는 계속 존재하므로 참조자로 받을 수 있는것이다.   
-(해당 메모리를 받쳐주는 매개변수는 사라질지라도 메모리는 존재하므로)     
-```int``` 반환하는 대상의 값(상수)을 반환하는 것이고 
-```int&``` 반환하는 대상의 메모리 대상을 반환하는 것이다. 
- 
+위와 같은 구조는 정말 중요하다   
+참조자나 포인터가 아닌 자료형을 기준으로 매개변수 값을 받을 경우 Call-by-value로 복사가 된다.  
+즉, 지역변수로 메모리가 새로 할당 되는 것이다.   
+
+여기서 만약 해당 메모리를 참조자로 반환을 하게 되면 어떻게 될까?  
+답은 간단하다 반환은 가능하다.   
+**하지만 지역변수로 메모리를 할당했기 때문에 메모리는 빈공간이 될 것이다.**
+즉, 메모리를 가리키지만 값이 없는 상태가 될 것이므로 이러한 코드를 작성하지 않는 것이 중요하다.   
+   
 ### 4.2.4. 일반 자료형 매개변수 & 일반 자료형 리턴          
 ```
 int main(void){
