--- a/정리/C++ 정리-01.md
+++ b/정리/C++ 정리-01.md
@@ -37,8 +37,8 @@ C++ 정리-01
 20. 이니셜라이저 : 생성자에서 멤버 할당을 생성과 동시에 하도록 해줌     
   * 멤버로 클래스일 경우 해당 클래스에 맞는 생성자 호출
   * 멤버로 일반 변수일 경우 묵시적 형태로 호출
-21. 소멸자의 이해 : 
-22. this 포인터 : 
+21. 소멸자의 이해 : 생성자에 ```~```를 붙인 형태로 클래스내 할당된 메모리를 삭제할 것을 정의
+22. this 포인터 : 객체 자기 자신을 의미하는 포인터 변수  
 23. 
 
 # 1. 
