--- a/정리/C++ 정리-01.md
+++ b/정리/C++ 정리-01.md
@@ -39,35 +39,24 @@ C++ 정리-01
   * 멤버로 일반 변수일 경우 묵시적 형태로 호출
 21. 소멸자의 이해 : 생성자에 ```~```를 붙인 형태로 클래스내 할당된 메모리를 삭제할 것을 정의
 22. this 포인터 : 객체 자기 자신을 의미하는 포인터 변수  
-23. 
-
-# 1. 
-> 인용
-## 1.1. 소 주제
-### 1.1.1. 내용1
-```
-내용1
-```
-## 1.2. 소 주제
-### 1.2.1. 내용1
-```
-내용1
-```
-
-***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
-```
-내용1
-```   
-
-***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
-### 3.1.1. 내용1
-```
-내용1
-```
+23. 복사 생성자 ```객체1 = 객체2```를 ```객체1(객체2)```형태의 생성자로 생성하는 것이다.   
+  * 디폴트 복사 생성자 : 복사 생성자를 정의하지 않았으면 자동으로 호출된다.      
+  디폴트 복사 생성자에는 문제점이 있는데 바로 얕은 복사를 진행하는 것이다.     
+  만일 멤버에 메모리를 가리키는 변수가 있다면 그것이 복사되어 같은 메모리를 가리키는 형태가 된다.    
+  이는 소멸자로 소멸할 시에 가리키는 대상이 같이 소멸되는 문제점을 야기한다.        
+  * 사용자 정의 복사 생성자 : new 키워드를 이용해서 새로운 메모리에 할당하는 식으로 정의해주자     
+  * **그 외** 복사생성자와 대입 연산자 오버로딩이 헷갈리니 주의하자     
+  초기화를 진행하면 생성자 초기화 이외에 할다이면 대입 연산자 오버로딩     
+24. explicit : 묵시적 형 변환으로의 변환으 막음 ```Class calss(3)```이런식으로만 가능  
+25. const 객체 : const로 선언되지 않는 멤버함수의 호출이 불가능하다
+26. friend 키워드 : firend로 선언된 클래스는 현재 클래스의 private도 접근 가능 (함수에 정의 가능)   
+27. static 키워드 : 
+  * 전역변수에 선언된 static : 선언된 파일 내에서만 참조를 허용 
+  * 함수내 변수에 선언된 static : 한번만 초기화되고, 지역변수와 달리 빠져나와도 소멸되지 않는다.      
+  * static 멤버 변수 : 멤버변수가 아니니 생성자에서 초기화 하는 것이 아닌 밖에서 초기화 권고           
+  public 접근제어자를 가졌으면 외부에서 ```Class::static변수명```으로 사용 가능하다.         
+  * static 멤버 함수 : 객체의 멤버로 존재하는 것은 마찬가지로 아니다. (네임스페이스 이용이라 보면된다)     
+  선언된 클래스의 모든 객체가 공유하며 public으로 선언이 되면, ```Class::static함수명```으로 사용 가능하다.    
+  참고로 static 멤버 함수는 객체가 생성되기 전에 존재하는 것이므로 클래스내에서는 staic변수만 접근 가능하다.     
+28. const static 키워드 : 클래스가 정의될 때 공통으로 사용하는 상수를 지정할 때 주로 사용한다.   
+29. mutable 키워드 : mutable로 선언된 멤버 변수는 const 함수내에서 접근이 가능하다.   
