--- a/정리/C++ 정리-02.md
+++ b/정리/C++ 정리-02.md
@@ -2,4 +2,22 @@ C++ 정리-02
 =======================
 이미 알고 있는 내용이나 너무 기초적인 내용은 정리하지 않겠습니다.
 
-30. 
+30. 상속 : ```class 클래스명 : 최대 접근제어자 상위 클래스```   
+상속에는 철학이 존재 : 
+  * 상속의 과정 
+    1. 메모리 공간 할당
+    2. 자식 클래스의 생성자 호출
+    3. 부모 클래스의 생성자의 호출 및 실행 
+    5. 자식 클래스의 생성자 실행 
+  * 자식 클래스의 객체 생성 과정2
+    1. 메모리 공간 할당
+    2. 자식 클래스의 생성자 호출
+    3. 이니셜라이저를 통한 부모 클래스의 생성자 호출이 명시 되어있지 않으니 void 생성자 호출 및 실행 
+    4. 자식 클래스의 생성자 실행   
+  * 소멸 과정 : 상속 받은 클래스에 대한 소멸만 진행해도 부모 클래스까지 소멸이 진행된다.      
+31. protected 키워드 : private 와 public 중간으로 상속한 객체에 대해서는 접근 허용         
+32. 상속의 조건 : is-a 조건이 가자 알맞음 ```smartPhone is phone```->```모든 스마트폰은 폰이다```     
+33. C++에서는 다중 상속 지원 근데 잘 사용 X, 다중 상속에 알맞은 has-a 조건 ```검-> 경찰 <-총```    
+34. 다형성 : 상위 클래스 자료형은 직간접적인 상속관계에 있는 자료형 메모리를 참조할 수 있다.      
+객체에 대한 참조 변수는 일반변수, 참조자, 포인터로 사용가능하지만 이럴 경우 포인터를 이용한다.   
+
