--- a/정리/C++ 정리-02.md
+++ b/정리/C++ 정리-02.md
@@ -3,7 +3,7 @@ C++ 정리-02
 이미 알고 있는 내용이나 너무 기초적인 내용은 정리하지 않겠습니다.
 
 30. 상속 : ```class 클래스명 : 최대 접근제어자 상위 클래스```   
-상속에는 철학이 존재 : 
+상속에는 철학이 존재 : 연관된 클래스들간의 공통의 규약
   * 상속의 과정 
     1. 메모리 공간 할당
     2. 자식 클래스의 생성자 호출
@@ -14,10 +14,17 @@ C++ 정리-02
     2. 자식 클래스의 생성자 호출
     3. 이니셜라이저를 통한 부모 클래스의 생성자 호출이 명시 되어있지 않으니 void 생성자 호출 및 실행 
     4. 자식 클래스의 생성자 실행   
-  * 소멸 과정 : 상속 받은 클래스에 대한 소멸만 진행해도 부모 클래스까지 소멸이 진행된다.      
+  * 소멸 과정 : 상속 받은 클래스에 대한 소멸먼 정의해도 부모 클래스까지 소멸이 진행된다.(단 virtual 정의)         
 31. protected 키워드 : private 와 public 중간으로 상속한 객체에 대해서는 접근 허용         
 32. 상속의 조건 : is-a 조건이 가자 알맞음 ```smartPhone is phone```->```모든 스마트폰은 폰이다```     
 33. C++에서는 다중 상속 지원 근데 잘 사용 X, 다중 상속에 알맞은 has-a 조건 ```검-> 경찰 <-총```    
 34. 다형성 : 상위 클래스 자료형은 직간접적인 상속관계에 있는 자료형 메모리를 참조할 수 있다.      
-객체에 대한 참조 변수는 일반변수, 참조자, 포인터로 사용가능하지만 이럴 경우 포인터를 이용한다.   
+객체에 대한 참조 변수는 일반변수, 참조자, 포인터로 사용가능하지만 이럴 경우 포인터를 이용한다.     
+그런데 다형성을 진행하더라도 변수의 자료형을 기준으로 연산 가능성을 판단하기에    
+메소드를 오버라이딩 했더라도 연산은 상위 클래스이므로 무용지물이 된다.   
+35. 가상함수 virtual 키워드: 가상함수는 위와 같은 문제를 해결하기 위해서 존재한다.     
+virtual 키워드를 메소드에 작성할 경우 객체의 마지막 오버라이딩 함수르 호출한다.   
+36. 순수가상함수 : 공통된 기준에 맞추기 위해서 몸체는 없지만 정의 되어있는 가상 함수
+37. 가상 소멸자 : 소멸자도 virtual로 선언함으로써 상위 소멸자만 호출하더라도 하위 소멸자도 전부 호출한다.  
+38. 참조자의 참조가능성(다형성) : 상위 자료형 참조자를 이용해서도 하위 객체를 참조할 수 있다.   
 
